Fix community logos size on mobile

--- a/source/assets/stylesheets/components/_misc.scss
+++ b/source/assets/stylesheets/components/_misc.scss
@@ -41,7 +41,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  .col-4{
+  .col-6{
     display: flex;
     text-align: center;
   }
